--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,7 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="my_dark_primary">#222224</color>
+    <color name="my_light_primary">#EFF1F8</color>
+    <color name="blue">#3F51B5</color>
 </resources>
