--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -6,4 +6,12 @@
     </style>
 
     <style name="Theme.ChartImplementJava" parent="Base.Theme.ChartImplementJava" />
+    <style name="button">
+        <item name="android:textColor">@color/white</item>
+        <item name="cornerRadius">8dp</item>
+        <item name="backgroundTint">@color/blue</item>
+    </style>
+    <style name="screen">
+        <item name="background">@color/my_light_primary</item>
+    </style>
 </resources>
